# Image-Generator-MCP

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/image_gen_mcp/: __init__.py  cache.py  cli.py  config.py  hf_client.py  image_ops.py  mcp_prompts.py  mcp_resources.py  mcp_tools.py  models.py  server.py  setup_codex.py
tests/: test_cache.py  test_config.py  test_local_edit.py
